--- a/map.html
+++ b/map.html
@@ -10,7 +10,8 @@
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
     integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
     crossorigin=""></script>
-    <script src="marauder.js" defer></script>
+    <script src="./scripts/coordinates.js" defer type="module"></script>
+    <script src="./scripts/marauder.js" defer type="module"></script>
     <style>
          html, body, #mapid {
      margin: 0;
